tests/ui/once_disk_concurrent_only.rs
use cached::macros::once;

#[once(disk = true)]
fn load() -> u64 {
    42
}

fn main() {}
